# cv-bot

./: .dockerignore  .gitignore  Dockerfile  README.md  carousel.py  cv_bot_app.py  edit_mongo_vectordb.ipynb  prompts.py  pyproject.toml  qdrant.ipynb  rag.py  rag_notebook.ipynb  requirements.txt
.devcontainer/: devcontainer.json
.streamlit/: config.toml
Chroma_collections/: chroma.sqlite3
backend/: api.py  main.py  rag.py
config/: db_config
docs/: cv.txt  example_cv.txt  leonardo_additional_info.txt  music.txt  soccer.txt
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.css  App.tsx
frontend/src/components/: ChatInput.css  ChatInput.tsx  ChatWindow.css  ChatWindow.tsx  Hero.css  Hero.tsx  HowItsDone.css  HowItsDone.tsx  MessageBubble.css  MessageBubble.tsx  StackDiagramModal.css  StackDiagramModal.tsx  TypingIndicator.css  TypingIndicator.tsx
frontend/src/components/__tests__/: HowItsDone.test.tsx  MessageBubble.test.tsx
frontend/src/lib/: api.ts  storage.ts  types.ts
frontend/src/lib/__tests__/: api.test.ts
frontend/src/styles/: global.css  tokens.css
tests/: test_api.py
