[project]
name = "cv-bot"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "langchain",
    "langchain-community",
    "langchain-openai",
    "openai",
    "python-dotenv",
    "qdrant-client",
    "streamlit",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "ipykernel",
]