[project]
name = "cv-bot"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "fastapi",
    "langchain",
    "langchain-community",
    "langchain-openai",
    "openai",
    "python-dotenv",
    "qdrant-client",
    "sse-starlette",
    "streamlit",
    "uvicorn[standard]",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "ipykernel",
]